# NLP-Beginner-task1

./: .gitignore  pyproject.toml
src/textcls/: data.py  experiments.py  features.py  model.py  train.py
